commencement responsive desktop

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
                 <h1 class="title">Fonctionnement </h1>
 
                 <!-- BOUTON 1 -->
+                <div class="button-mobile">
                 <div class="button-funct">
                     <div class="number-container">
                         <div class="number">1</div>
@@ -64,7 +65,7 @@
                     <i class="fa-solid fa-store icon-flex"></i>
                     <p> Dégustez au restaurant </p>
                 </div>
-
+            </div>
 
             </section>
             <section>
