--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
                 <div class="restaurants">
                     <h1 id="resturants-link" class="title2">Restaurants</h1>
                     <!-- La palette du goût -->
+                    <div class="card-mobile">
                     <div class="restau-card">
                         <div class="nouveau"> Nouveau</div>
                         <img class="size-img" src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
@@ -96,7 +97,9 @@
                         </div>
                         <div class="nouveau"> Nouveau</div>
                     </div>
-                    <!-- A la Française -->
+                    </div>
+                                <!-- A la Française -->
+                                <div class="card-mobile">
                     <div class="restau-card">
                         <img class="size-img" src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="">
                         <div class="restau">
@@ -117,6 +120,7 @@
                             <i class="fa-regular fa-heart fa-xl heart-index"></i>
                         </div>
                     </div>
+                </div>
                 </div>
             </section>
         </main>
