--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <div class="restaurants">
                     <h1 id="resturants-link" class="title2">Restaurants</h1>
                     <!-- La palette du goût -->
-                    <div class="card-mobile">
+                    <div class="card-desktop">
                     <div class="restau-card">
                         <div class="nouveau"> Nouveau</div>
                         <img class="size-img" src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
@@ -99,7 +99,7 @@
                     </div>
                     </div>
                                 <!-- A la Française -->
-                                <div class="card-mobile">
+                                <div class="card-desktop">
                     <div class="restau-card">
                         <img class="size-img" src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="">
                         <div class="restau">
