ajout de la tablette sur la page d'accueil

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <h1 class="title">Fonctionnement </h1>
 
                 <!-- BOUTON 1 -->
-                <div class="button-mobile">
+                <div class="button-desktop">
                 <div class="button-funct">
                     <div class="number-container">
                         <div class="number">1</div>
