--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ohmyfood</title>
     <link href="https://fonts.googleapis.com/css2?family=Play&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/76764cbef3.js" crossorigin="anonymous"></script>
@@ -125,16 +123,13 @@
             </section>
         </main>
         <!-- FOOTER -->
-        <footer>
+        <footer class="flex-desktop">
+            <div></div>
             <div class="logo-footer"> ohmyfood </div>
-            <div class="text-footer1">
-                <p><i class="fa-solid fa-utensils icon-footer"></i> Proposer un restaurant</p>
-                <p><i class="fa-solid fa-handshake-angle icon-footer"></i> Devenir partenaire</p>
-            </div>
-            <div class="text-footer2">
-                <p>Mention légales</p>
-                <p> Contact</p>
-            </div>
+               <div class="footer1 reverse"> <p><i class="fa-solid fa-utensils icon-footer"></i> Proposer un restaurant</p> </div> 
+               <div class="footer2 reverse">  <p><i class="fa-solid fa-handshake-angle icon-footer"></i> Devenir partenaire</p> </div> 
+                <p class="footer3">Mention légales</p>
+                <p class="footer4"> Contact</p>
         </footer>
     </div>
 </body>
