responsive des menus début footer

--- a/a-l-francaise.html
+++ b/a-l-francaise.html
@@ -109,14 +109,15 @@
 
         </section>
     </main>
-    <footer>
-        <div class="logo-footer"> ohmyfood </div>
-        <div class="text-footer1">
-            <p><i class="fa-solid fa-utensils icon-footer"></i> Proposer un restaurant</p>
-            <p><i class="fa-solid fa-handshake-angle icon-footer"></i> Devenir partenaire</p>
-        </div>
-        <div class="text-footer2">
-            <p>Mention légales</p>
-            <p> Contact</p>
-        </div>
-    </footer>
+           <!-- FOOTER -->
+           <footer class="flex-desktop">
+            <div></div>
+            <div class="logo-footer"> ohmyfood </div>
+               <div class="footer1 reverse"> <p><i class="fa-solid fa-utensils icon-footer"></i> Proposer un restaurant</p> </div> 
+               <div class="footer2 reverse">  <p><i class="fa-solid fa-handshake-angle icon-footer"></i> Devenir partenaire</p> </div> 
+                <p class="footer3">Mention légales</p>
+                <p class="footer4"> Contact</p>
+        </footer>
+    </div>
+</body>
+</html>
