responsive menu price

--- a/delice.html
+++ b/delice.html
@@ -44,17 +44,20 @@
                 <div class="food-item">
                     <p class="marge1">Tartare de thon</p>
                     <p class="marge2">Assaisonné au yuzu</p>
+                    <div class="price">35 €</div>
                 </div>
 
                 <div class="food-item">
                     <p class="marge1">Bouchée de homard croustillant</p>
                     <p class="marge2">Et sa farandole de petitis légumes</p>
+                    <div class="price">35 €</div>
 
                 </div>
 
                 <div class="food-item">
                     <p class="marge1">Poulet rôti aux herbes de Provence</p>
                     <p class="marge2">Et sa crème de truffe</p>
+                    <div class="price">35 €</div>
 
                 </div>
 
@@ -64,12 +67,14 @@
                 <div class="food-item">
                     <p class="marge1">Poulet rôti aux herbes de Provence</p>
                     <p class="marge2">Et sa crème de truffe</p>
+                    <div class="price">35 €</div>
 
                 </div>
 
                 <div class="food-item">
                     <p class="marge1">Langouste rôtie</p>
                     <p class="marge2">Et ses légumes de saison</p>
+                    <div class="price">35 €</div>
 
                 </div>
 
@@ -77,6 +82,7 @@
 
                     <p class="marge1">Côte de boeuf Angus</p>
                     <p class="marge2">Et sa purée de panais</p>
+                    <div class="price">35 €</div>
 
                 </div>
 
@@ -87,18 +93,21 @@
                 <div class="food-item">
                     <p class="marge1">Oeuf au plat</p>
                     <p class="marge2">Assaisonné à la truffe sur lit de caviar</p>
+                    <div class="price">35 €</div>
 
                 </div>
 
                 <div class="food-item">
                     <p class="marge1">Crème brulée</p>
                     <p class="marge2">Revisitée</p>
+                    <div class="price">35 €</div>
 
                 </div>
 
                 <div class="food-item">
                     <p class="marge1">Tiramisu</p>
                     <p class="marge2">A la noisette</p>
+                    <div class="price">35 €</div>
 
                 </div>
 
