--- a/palette.html
+++ b/palette.html
@@ -44,17 +44,20 @@
                 <div class="food-item">
                     <p class="marge1">Fricassée d'escargots</p>
                     <p class="marge2">Au piment d'Espelette</p>
+                    <div class="price">35 €</div>
                 </div>
 
                 <div class="food-item">
                     <p class="marge1">Foie gras de canard mi-cuit</p>
                     <p class="marge2">Et ses copeaux de truffe noire</p>
+                    <div class="price">35 €</div>
 
                 </div>
 
                 <div class="food-item">
                     <p class="marge1">Oeuf au plat</p>
                     <p class="marge2">Assaisonné à la truffe sur lit de caviar</p>
+                    <div class="price">35 €</div>
 
                 </div>
 
@@ -64,12 +67,14 @@
                 <div class="food-item">
                     <p class="marge1">Filete de boeuf aux herbes</p>
                     <p class="marge2">Accompagné de sa ribambelle de légumes</p>
+                    <div class="price">35 €</div>
 
                 </div>
 
                 <div class="food-item">
                     <p class="marge1">Parmentier de queue de boeuf</p>
                     <p class="marge2">A la truffe noire sur sa purée de panais</p>
+                    <div class="price">35 €</div>
 
                 </div>
 
@@ -77,6 +82,7 @@
 
                     <p class="marge1">Filet de turbot</p>
                     <p class="marge2">Aux agrumes/p>
+                        <div class="price">35 €</div>
 
                 </div>
 
@@ -87,18 +93,21 @@
                 <div class="food-item">
                     <p class="marge1">Paris-Brest</p>
                     <p class="marge2">Revisité</p>
+                    <div class="price">35 €</div>
 
                 </div>
 
                 <div class="food-item">
                     <p class="marge1">Macaron au chocolat d'exception</p>
                     <p class="marge2">Et glace à la vanille de Madagascar</p>
+                    <div class="price">35 €</div>
 
                 </div>
 
                 <div class="food-item">
                     <p class="marge1">Mousse au chocolat</p>
                     <p class="marge2">Au piment d'Espelette et à la truffe noire</p>
+                    <div class="price">35 €</div>
 
                 </div>
 
