--- a/note.html
+++ b/note.html
@@ -44,23 +44,27 @@
                 <div class="food-item">
                     <p class="marge1">Ravioles de foie gras</p>
                     <p class="marge2">Accompagnées de leur crème à la truffe</p>
+                    <div class="price">35 €</div>
                 </div>
 
                 <div class="food-item">
                     <p class="marge1">Caviar osciètre</p>
                     <p class="marge2">Sur blini à la farine de blé noir</p>
+                    <div class="price">35 €</div>
 
                 </div>
 
                 <div class="food-item">
                     <p class="marge1">Homard et espuma de potiron</p>
                     <p class="marge2">Marinés aux zestes d'orange</p>
+                    <div class="price">35 €</div>
 
                 </div>
 
                 <div class="food-item">
                     <p class="marge1">Foie gras de canard cuit entier</p>
                     <p class="marge2">Confiture de figue et pain toasté</p>
+                    <div class="price">35 €</div>
 
                 </div>
 
@@ -70,12 +74,14 @@
                 <div class="food-item">
                     <p class="marge1">Noix de coquilles Saint-Jacques</p>
                     <p class="marge2">Sur lit de purée de céleri-rave</p>
+                    <div class="price">35 €</div>
 
                 </div>
 
                 <div class="food-item">
                     <p class="marge1">Langoustine poêlée</p>
                     <p class="marge2">Purée de patate douce</p>
+                    <div class="price">35 €</div>
 
                 </div>
 
@@ -83,6 +89,7 @@
 
                     <p class="marge1">Mijoté de queue de boeuf</p>
                     <p class="marge2"> Et riz sauvage aux zestes de citron</p>
+                    <div class="price">35 €</div>
 
                 </div>
 
@@ -93,18 +100,21 @@
                 <div class="food-item">
                     <p class="marge1">Macaron noisette et chocolat</p>
                     <p class="marge2">Glace au caramel brun et sel de Guérande</p>
+                    <div class="price">35 €</div>
 
                 </div>
 
                 <div class="food-item">
                     <p class="marge1">Baba au rhum revisité</p>
                     <p class="marge2">Avec son coulis de citron</p>
+                    <div class="price">35 €</div>
 
                 </div>
 
                 <div class="food-item">
                     <p class="marge1">Tarte au citron meringuée</p>
                     <p class="marge2">Déstructurée</p>
+                    <div class="price">35 €</div>
 
                 </div>
 
