--- a/palette.html
+++ b/palette.html
@@ -32,6 +32,7 @@
     <main>
 
         <section class="menu">
+            <div class="menu-desktop">
             <div class="flex">
                 <h1 class="title-restau"> La palette du goût</h1>
                 <i class="fa-regular fa-heart fa-xl fa-xl2"></i>
@@ -110,7 +111,7 @@
                     <div class="price">35 €</div>
 
                 </div>
-
+            </div>
             </div>
 
             <div class="button">Commander</div>
