--- a/a-l-francaise.html
+++ b/a-l-francaise.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/76764cbef3.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="./css/style2.css">
+    <link rel="stylesheet" href="./css/stylemenu.css">
 </head>
 
 <body>
@@ -28,10 +28,11 @@
     </header>
     <main>
 
-        <section class="menu">
+        <section>
+            <div class="menu">
             <div class="flex">
                 <h1 class="title-restau"> A la française</h1>
-                <i class="fa-regular fa-heart fa-xl fa-xl2"></i>
+               <div> <i class="fa-regular fa-heart fa-xl fa-xl2 testheart"></i></div>
             </div>
 
             <div class="entr">
@@ -41,7 +42,7 @@
                 <div class="food-item">
                     <div> <p class="marge1">Tartare de poulpe acidulé</p></div>
                     <div> <p class="marge2">Aux zestes d'orange</p> </div>
-                    <div class="price">35 €</div>
+                    <div class="price">25 €</div>
 
                 </div>
                 <div class="food-item">
@@ -54,7 +55,7 @@
                 <div class="food-item">
                     <p class="marge1">Soupe à l'oignon</p>
                     <p class="marge2">Revisitée</p>
-                    <div class="price">35 €</div>
+                    <div class="price">20 €</div>
 
                 </div>
 
@@ -64,7 +65,7 @@
                 <div class="food-item">
                     <p class="marge1">Coquilles Saint-Jacques</p>
                     <p class="marge2">Accompagnées d'une purée de panais</p>
-                    <div class="price">35 €</div>
+                    <div class="price">40 €</div>
 
                 </div>
 
@@ -79,7 +80,7 @@
 
                     <p class="marge1">Pigeonneau d'Ille-et-Vilaine</p>
                     <p class="marge2">Sur son lit de gnocchis aux légumes</p>
-                    <div class="price">35 €</div>
+                    <div class="price">44 €</div>
 
                 </div>
 
@@ -90,27 +91,28 @@
                 <div class="food-item">
                     <p class="marge1">Pétales de violettes glacés</p>
                     <p class="marge2">Et purée de noisettes</p>
-                    <div class="price">35 €</div>
+                    <div class="price">18 €</div>
 
                 </div>
 
                 <div class="food-item">
                     <p class="marge1">Fondant au chocolat</p>
                     <p class="marge2">Revisité</p>
-                    <div class="price">35 €</div>
+                    <div class="price">22 €</div>
 
                 </div>
 
                 <div class="food-item">
                     <p class="marge1">Millefeuille croustillant</p>
                     <p class="marge2">Myrtilles et pâte d'amande</p>
-                    <div class="price">35 €</div>
+                    <div class="price">23 €</div>
 
                 </div>
 
             </div>
 
             <div class="button">Commander</div>
+        </div>
 
 
         </section>
