--- a/a-l-francaise.html
+++ b/a-l-francaise.html
@@ -58,7 +58,8 @@
                     <div class="price">20 €</div>
 
                 </div>
-
+            </div>
+                <div class="plats">
                 <p class="upper">
                     PLATS
                 </p>
@@ -83,7 +84,9 @@
                     <div class="price">44 €</div>
 
                 </div>
+                </div>
 
+                <div class="desserts">
                 <p class="upper">
                     DESSERTS
                 </p>
@@ -108,8 +111,9 @@
                     <div class="price">23 €</div>
 
                 </div>
-
             </div>
+
+            
 
             <div class="button">Commander</div>
         </div>
