projet avant intégration des animations

--- a/note.html
+++ b/note.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/76764cbef3.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="./css/style2.css">
+    <link rel="stylesheet" href="./css/stylemenu.css">
 </head>
 
 <body>
@@ -65,9 +65,10 @@
                     <p class="marge1">Foie gras de canard cuit entier</p>
                     <p class="marge2">Confiture de figue et pain toasté</p>
                     <div class="price">35 €</div>
-
+                </div>
                 </div>
 
+                <div class="plats">
                 <p class="upper">
                     PLATS
                 </p>
@@ -92,7 +93,8 @@
                     <div class="price">45 €</div>
 
                 </div>
-
+            </div>
+            <div class="desserts">
                 <p class="upper">
                     DESSERTS
                 </p>
@@ -115,11 +117,8 @@
                     <p class="marge1">Tarte au citron meringuée</p>
                     <p class="marge2">Déstructurée</p>
                     <div class="price">23 €</div>
-
                 </div>
-
-            </div>
-
+                </div>
             <div class="button">Commander</div>
 
 
