--- a/a-l-francaise.html
+++ b/a-l-francaise.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ohmyfood</title>
-    <link href="https://fonts.googleapis.com/css2?family=Play&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap">
@@ -32,7 +31,7 @@
             <div class="menu">
             <div class="flex">
                 <h1 class="title-restau"> A la française</h1>
-               <div> <i class="fa-regular fa-heart fa-xl fa-xl2 testheart"></i></div>
+               <div> <i class="fa-regular fa-heart fa-xl fa-xl2"></i></div>
             </div>
 
             <div class="entr">
