--- a/delice.html
+++ b/delice.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/76764cbef3.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="./css/style2.css">
+    <link rel="stylesheet" href="./css/stylemenu.css">
 </head>
 
 <body>
@@ -60,7 +60,9 @@
                     <div class="price">40 €</div>
 
                 </div>
+                </div>
 
+                <div class="plats">
                 <p class="upper">
                     PLATS
                 </p>
@@ -85,7 +87,9 @@
                     <div class="price">44 €</div>
 
                 </div>
+                </div>
 
+                <div class="desserts">
                 <p class="upper">
                     DESSERTS
                 </p>
@@ -110,9 +114,7 @@
                     <div class="price">23 €</div>
 
                 </div>
-
             </div>
-
             <div class="button">Commander</div>
 
 
