--- a/a-l-francaise.html
+++ b/a-l-francaise.html
@@ -18,8 +18,8 @@
         <header>
             <div class="bloc-logo">
                 <div class="icon-back">
-                    <i class="fa-solid fa-arrow-left fa-xl fa-xl1"></i>
-                </div>
+                    <a id="back" href="index.html"> <i class="fa-solid fa-arrow-left fa-xl fa-xl1"></i></a>
+                 </div>
                 <img class="logo" src="images/logo/ohmyfood@2x.svg" alt="">
                 <div class="empty-div"></div>
             </div>
