--- a/note.html
+++ b/note.html
@@ -30,7 +30,11 @@
     </div>
     </header>
     <main>
-
+        <div class="loader-container">
+            <div class="dot d1"></div>
+            <div class="dot d2"></div>
+            <div class="dot d3"></div>
+        </div>
         <section class="menu">
             <div class="flex">
                 <h1 class="title-restau"> La note enchantée</h1>
