--- a/palette.html
+++ b/palette.html
@@ -30,14 +30,18 @@
     </div>
     </header>
     <main>
-
         <section class="menu">
             <div class="menu-desktop">
+
             <div class="flex">
                 <h1 class="title-restau"> La palette du goût</h1>
                 <i class="fa-regular fa-heart fa-xl fa-xl2"></i>
             </div>
-
+            <div class="loader-container">
+                <div class="dot d1"></div>
+                <div class="dot d2"></div>
+                <div class="dot d3"></div>
+            </div>
             <div class="entr">
                 <p class="upper">
                     Entrées
@@ -62,6 +66,7 @@
 
                 </div>
                 </div>
+
                 <div class="plats">
                 <p class="upper">
                     PLATS
