--- a/a-l-francaise.html
+++ b/a-l-francaise.html
@@ -26,6 +26,11 @@
         <img class="size-img" src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
     </header>
     <main>
+        <div class="loader-container">
+            <div class="dot d1"></div>
+            <div class="dot d2"></div>
+            <div class="dot d3"></div>
+        </div>
 
         <section>
             <div class="menu">
