correction du bug sur le loader, loarder terminé

--- a/delice.html
+++ b/delice.html
@@ -39,6 +39,11 @@
             <div class="flex">
                 <h1 class="title-restau"> Le délice des sens</h1>
                 <i class="fa-regular fa-heart fa-xl fa-xl2"></i>
+                <div class="loader-container">
+                    <div class="dot d1"></div>
+                    <div class="dot d2"></div>
+                    <div class="dot d3"></div>
+                </div>
             </div>
 
             <div class="entr">
