survol des boutons et cards de la page d'accueil

--- a/delice.html
+++ b/delice.html
@@ -136,7 +136,8 @@
                    <div class="footer1 reverse"> <p><i class="fa-solid fa-utensils icon-footer"></i> Proposer un restaurant</p> </div> 
                    <div class="footer2 reverse">  <p><i class="fa-solid fa-handshake-angle icon-footer"></i> Devenir partenaire</p> </div> 
                     <p class="footer3">Mention légales</p>
-                    <p class="footer4"> Contact</p>
+                    <p class="footer4"> <a href="mailto:contact@ohmyfood.com">Contact</a></p>
+
             </footer>
         </div>
     </body>
