--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
 
 	<body>
 		<div class="container">
+			<div class="loader-container">
+				<div class="dot d1"></div>
+				<div class="dot d2"></div>
+				<div class="dot d3"></div>
+			</div>
 			<header>
 				<!-- LOGO -->
 				<div class="bloc-logo"><img src="images/logo/ohmyfood@2x.svg" alt=""></div>
@@ -33,11 +38,7 @@
 				</nav>
 			</header>
 			<main>
-                <div class="loader-container">
-                    <div class="dot d1"></div>
-                    <div class="dot d2"></div>
-                    <div class="dot d3"></div>
-                </div>
+            
 				<section class="fonctionnement">
 					<h1 class="title">Fonctionnement </h1>
 
@@ -151,7 +152,7 @@
 					<p><i class="fa-solid fa-handshake-angle icon-footer"></i> Devenir partenaire</p>
 				</div>
 				<p class="footer3">Mention légales</p>
-				<p class="footer4"> Contact</p>
+				<p class="footer4"> <a href="mailto:contact@ohmyfood.com">Contact</a></p>
 			</footer>
 		</div>
 	</body>
