correction erreur balise P palette du gout

--- a/palette.html
+++ b/palette.html
@@ -89,7 +89,7 @@
                 <div class="food-item">
 
                     <p class="marge1">Filet de turbot</p>
-                    <p class="marge2">Aux agrumes/p>
+                    <p class="marge2">Aux agrumes</p>
                         <div class="price">44 €</div>
 
                 </div>
