--- a/index.html
+++ b/index.html
@@ -155,6 +155,6 @@
 				<p class="footer4"> <a href="mailto:contact@ohmyfood.com">Contact</a></p>
 			</footer>
 		</div>
+		<div class="overlay"></div>
 	</body>
-
 </html>
