loader terminé sur la page d'accueil, début de l'intégration du coeur

--- a/a-l-francaise.html
+++ b/a-l-francaise.html
@@ -134,5 +134,6 @@
                 <p class="footer4"> <a href="mailto:contact@ohmyfood.com">Contact</a></p>
         </footer>
     </div>
+    <div class="overlay"></div>
 </body>
 </html>
