--- a/index.html
+++ b/index.html
@@ -87,7 +87,10 @@
 											<h3>La palette du goût</h3>
 											<p>Ménilmontant</p>
 										</div>
-										<i class="fa-regular fa-heart fa-xl heart-index "></i>
+										<div class="btn-like">
+											<i class="fa-regular fa-heart heart-like heart-like-rempli fa-xl"></i>
+											<i class="fa-solid fa-heart heart-like fa-xl"></i>
+										  </div>
 									</div>
 								</a>
 								<div class="nouveau"> Nouveau</div>
