--- a/palette.html
+++ b/palette.html
@@ -15,7 +15,6 @@
 </head>
 
 <body>
-    <div class="container">
         <header>
             <div class="bloc-logo">
                 <div class="icon-back">
@@ -138,5 +137,6 @@
                     <p class="footer4"> <a href="mailto:contact@ohmyfood.com">Contact</a></p>
             </footer>
         </div>
+        <div class="overlay"></div>
     </body>
     </html>
