--- a/note.html
+++ b/note.html
@@ -141,5 +141,6 @@
                     <p class="footer4"> <a href="mailto:contact@ohmyfood.com">Contact</a></p>
             </footer>
         </div>
+        <div class="overlay"></div>
     </body>
     </html>
