intégration des coeurs sur la page d'accueil

--- a/a-l-francaise.html
+++ b/a-l-francaise.html
@@ -31,7 +31,8 @@
             <div class="menu">
             <div class="flex">
                 <h1 class="title-restau"> A la française</h1>
-               <div> <i class="fa-regular fa-heart fa-xl fa-xl2"></i></div>
+               <div> <i class="fa-regular fa-heart fa-xl fa-xl2"></i>
+            </div>
                <div class="loader-container">
                 <div class="dot d1"></div>
                 <div class="dot d2"></div>
