--- a/index.html
+++ b/index.html
@@ -87,10 +87,10 @@
 											<h3>La palette du goût</h3>
 											<p>Ménilmontant</p>
 										</div>
-										<div class="btn-like">
-											<i class="fa-regular fa-heart heart-like heart-like-rempli fa-xl"></i>
-											<i class="fa-solid fa-heart heart-like fa-xl"></i>
-										  </div>
+										<div class="heart-btn heart-btn--accent">
+											<i class="heart-btn__empty fa-regular fa-heart"></i>
+											<i class="heart-btn__filled fa-solid fa-heart"></i>
+										</div>
 									</div>
 								</a>
 								<div class="nouveau"> Nouveau</div>
@@ -105,7 +105,10 @@
 											<h3>La note enchantée</h3>
 											<p>Charonne</p>
 										</div>
-										<i class="fa-regular fa-heart fa-xl heart-index"></i>
+										<div class="heart-btn heart-btn--accent">
+											<i class="heart-btn__empty fa-regular fa-heart"></i>
+											<i class="heart-btn__filled fa-solid fa-heart"></i>
+										</div>
 									</div>
 								</a>
 								<div class="nouveau"> Nouveau</div>
@@ -122,7 +125,10 @@
 											<h3> À la Française</h3>
 											<p>Cité Rouge</p>
 										</div>
-										<i class="fa-regular fa-heart fa-xl heart-index"></i>
+										<div class="heart-btn heart-btn--accent">
+											<i class="heart-btn__empty fa-regular fa-heart"></i>
+											<i class="heart-btn__filled fa-solid fa-heart"></i>
+										</div>
 									</div>
 								</a>
 							</div>
@@ -136,7 +142,10 @@
 											<h3>Le délice des sens</h3>
 											<p>Ménilmontant</p>
 										</div>
-										<i class="fa-regular fa-heart fa-xl heart-index"></i>
+										<div class="heart-btn heart-btn--accent">
+											<i class="heart-btn__empty fa-regular fa-heart"></i>
+											<i class="heart-btn__filled fa-solid fa-heart"></i>
+										</div>
 									</div>
 								</a>
 							</div>
