intégration du check sur les menu

--- a/a-l-francaise.html
+++ b/a-l-francaise.html
@@ -45,50 +45,83 @@
                     Entrées
                 </p>
                 <div class="food-item">
-                    <div> <p class="marge1">Tartare de poulpe acidulé</p></div>
-                    <div> <p class="marge2">Aux zestes d'orange</p> </div>
-                    <div class="price">25 €</div>
-
+                    <div>
+                        <p class="marge1">Tartare de poulpe acidulé</p>
+                        <p class="marge2">Aux zestes d'orange</p>
+                    </div>
+                    <div class="price-check-container">
+                        <div class="price">25 €</div>
+                        <div class="check">
+                            <i class="far fa-check-circle fa-lg"></i>
+                        </div>
+                    </div>
                 </div>
                 <div class="food-item">
-                    <p class="marge1">Velouté de légumes d'antan</p>
-                    <p class="marge2">Carotte, panais, topinambour</p>
-                    <div class="price">35 €</div>
-
+                    <div>
+                        <p class="marge1">Tartare de poulpe acidulé</p>
+                        <p class="marge2">Aux zestes d'orange</p>
+                    </div>
+                    <div class="price-check-container">
+                        <div class="price">25 €</div>
+                        <div class="check">
+                            <i class="far fa-check-circle fa-lg"></i>
+                        </div>
+                    </div>
                 </div>
 
                 <div class="food-item">
-                    <p class="marge1">Soupe à l'oignon</p>
-                    <p class="marge2">Revisitée</p>
-                    <div class="price">20 €</div>
-
+                    <div>
+                        <p class="marge1">Tartare de poulpe acidulé</p>
+                        <p class="marge2">Aux zestes d'orange</p>
+                    </div>
+                    <div class="price-check-container">
+                        <div class="price">25 €</div>
+                        <div class="check">
+                            <i class="far fa-check-circle fa-lg"></i>
+                        </div>
+                    </div>
                 </div>
-            </div>
                 <div class="plats">
                 <p class="upper">
                     PLATS
                 </p>
                 <div class="food-item">
-                    <p class="marge1">Coquilles Saint-Jacques</p>
-                    <p class="marge2">Accompagnées d'une purée de panais</p>
-                    <div class="price">40 €</div>
-
+                    <div>
+                        <p class="marge1">Tartare de poulpe acidulé</p>
+                        <p class="marge2">Aux zestes d'orange</p>
+                    </div>
+                    <div class="price-check-container">
+                        <div class="price">25 €</div>
+                        <div class="check">
+                            <i class="far fa-check-circle fa-lg"></i>
+                        </div>
+                    </div>
                 </div>
 
                 <div class="food-item">
-                    <p class="marge1">Magret de canard</p>
-                    <p class="marge2">Et parmentier de pommes de terre</p>
-                    <div class="price">35 €</div>
-
+                    <div>
+                        <p class="marge1">Tartare de poulpe acidulé</p>
+                        <p class="marge2">Aux zestes d'orange</p>
+                    </div>
+                    <div class="price-check-container">
+                        <div class="price">25 €</div>
+                        <div class="check">
+                            <i class="far fa-check-circle fa-lg"></i>
+                        </div>
+                    </div>
                 </div>
 
                 <div class="food-item">
-
-                    <p class="marge1">Pigeonneau d'Ille-et-Vilaine</p>
-                    <p class="marge2">Sur son lit de gnocchis aux légumes</p>
-                    <div class="price">44 €</div>
-
-                </div>
+                    <div>
+                        <p class="marge1">Tartare de poulpe acidulé</p>
+                        <p class="marge2">Aux zestes d'orange</p>
+                    </div>
+                    <div class="price-check-container">
+                        <div class="price">25 €</div>
+                        <div class="check">
+                            <i class="far fa-check-circle fa-lg"></i>
+                        </div>
+                    </div>
                 </div>
 
                 <div class="desserts">
@@ -97,27 +130,43 @@
                 </p>
 
                 <div class="food-item">
-                    <p class="marge1">Pétales de violettes glacés</p>
-                    <p class="marge2">Et purée de noisettes</p>
-                    <div class="price">18 €</div>
-
+                    <div>
+                        <p class="marge1">Tartare de poulpe acidulé</p>
+                        <p class="marge2">Aux zestes d'orange</p>
+                    </div>
+                    <div class="price-check-container">
+                        <div class="price">25 €</div>
+                        <div class="check">
+                            <i class="far fa-check-circle fa-lg"></i>
+                        </div>
+                    </div>
                 </div>
 
                 <div class="food-item">
-                    <p class="marge1">Fondant au chocolat</p>
-                    <p class="marge2">Revisité</p>
-                    <div class="price">22 €</div>
-
+                    <div>
+                        <p class="marge1">Tartare de poulpe acidulé</p>
+                        <p class="marge2">Aux zestes d'orange</p>
+                    </div>
+                    <div class="price-check-container">
+                        <div class="price">25 €</div>
+                        <div class="check">
+                            <i class="far fa-check-circle fa-lg"></i>
+                        </div>
+                    </div>
                 </div>
 
                 <div class="food-item">
-                    <p class="marge1">Millefeuille croustillant</p>
-                    <p class="marge2">Myrtilles et pâte d'amande</p>
-                    <div class="price">23 €</div>
-
+                    <div>
+                        <p class="marge1">Tartare de poulpe acidulé</p>
+                        <p class="marge2">Aux zestes d'orange</p>
+                    </div>
+                    <div class="price-check-container">
+                        <div class="price">25 €</div>
+                        <div class="check">
+                            <i class="far fa-check-circle fa-lg"></i>
+                        </div>
+                    </div>
                 </div>
-            </div>
-
             
 
             <div class="button">Commander</div>
